--- a/estilos.css
+++ b/estilos.css
@@ -82,3 +82,61 @@ header h1
 {
       color: rgb(211, 211, 211);
 }
+/*--------------------------------------------------------------------*/
+main
+{
+      width: 90%;
+      margin: 65px auto;
+      background-color: #f5f5f8;
+      display: grid;     
+      grid-template-columns: 50% 50%;
+      gap: 50px;
+}
+
+#face-map
+{
+      color: #18306a;
+}
+
+#face-map img
+{
+      width: 100%;
+      margin-top: 45px;
+}
+
+#inputs-signup h2
+{
+      color: #18306a;
+      margin-bottom: 10px;
+}
+
+#inputs-signup h3
+{
+      color: #18306a;
+      margin-bottom: 25px;
+}
+
+#inputs-area
+{
+      width: 100%;
+      display: flex;
+      gap: 10px;
+}
+
+#labels
+{
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      align-items: flex-end;
+      width: 200px;
+}
+
+#inputs
+{
+      width: 50%;
+      display: flex;
+      gap: 10px;
+      flex-direction: column;
+}
